AP-2008-01-22-0: Bugfix:    deletion rule for PostgreSQL incorrect for deletion 
                            of sge_share_log
                 Bugster:   6653090
                 Issue:     2468
                 Review:    JO

AP-2008-01-16-0: Bugfix:    o Wrong variable for calculating daily host values from 
                              hourly ones
                            o DBW derived rules and reporting queries that count 
                              jobs need to be updated - updating views view_accounting, 
                              view_job_times, view_jobs_completed
                            o Updating queries, fixing sql statements, adding 
                              descriptions
                 Bugster:   6457900, 6638354
                 Issue:     2463, 2440
                 Review:    JO

JO-2008-01-04-0: RFE:      dbwriter should write checkpoint to database
                 Bugster:  6644709
                 Issue:    2450
                 Review:   LP

JO-2007-12-19-0: Bugfix:   ARCo online help contains invalid, unclear or outdated information
                 Bugster:  6634786
                 Issue:    2434
                 Review:   JG

AP-2007-12-18-0: Bugfix:    o Queue Consumables query incorrect in ARCo predefined 
                              queries
                            o Upgrade to 6.1u3 fails for PostgreSQL < 8.0, minor 
                              issues i dbdefinition.xml for PSQL > 8.0
                 Bugster:   6598176, 6640690
                 Issue:     2373, 2446
                 Review:    JO

PJ-2007-12-07-0: Bugfix:    Error.jsp contains unbalanced tagError.jsp
                 Bugfix:    Reporting 'View' dropdown menu and 'Save Result' functionality is confusing  
                 Bugster:   6556389, 6638329
                 Issue:     2245,2439 
                 Changed:   reporting
                 Review:    JO

JO-2007-12-03-0: RFE:         DBW should use batch inserts