@@ -1,3 +1,11 @@
+PJ-2008-01-31-0: Bugfix:    Sort on table column throws exception 
+                            if explicit SORT specified in 
+                            SimpleQuery Sort on table column
+                 Bugfix:    ORDER BY clause ignored in Advanced Query
+                 Bugster:   6549694,6598005 
+                 Issue:     2344, 2354
+                 Review:    JO
+
 AP-2008-01-22-0: Bugfix:    deletion rule for PostgreSQL incorrect for deletion 
                             of sge_share_log
                  Bugster:   6653090
